--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ defaults:
       content: &content_defaults
         uploads_dir: "uploads/:title"
         format: p h1 h2 h3 h4 h5 h6 div
-        styles: /assets/css/theme.css
+        styles: /assets/css/main.scss
         undo: true
         redo: true
         left: text-left
