--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-gist
   - jekyll-avatar
+  - jekyll-archives
   - jekyll-sitemap
 
 exclude:
@@ -101,34 +102,6 @@ defaults:
       layout: post
       share: true
       related: true
-    _options:
-      content: &content_defaults
-        uploads_dir: "uploads/:title"
-        format: p h1 h2 h3 h4 h5 h6 div
-        styles: /assets/css/main.scss
-        undo: true
-        redo: true
-        left: text-left
-        center: text-center
-        right: text-right
-        justify: justify-content-center
-        bold: true
-        italic: true
-        underline: true
-        strike: true
-        subscript: false
-        superscript: false
-        blockquote: true
-        table: true
-        copyformatting: true
-        removeformat: true
-        numberedlist: true
-        bulletedlist: true
-        outdent: false
-        indent: false
-        image: true
-        link: true
-        embed: true
   # _pages
   - scope:
       path: ""
