--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -61,7 +61,7 @@ _inputs:
       empty_type: array
     cascade: true
   notes: 
-    type: multiline
+    type: textarea
 _select_data:
   logo_image:
     dark:
