--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -62,6 +62,8 @@ _inputs:
     cascade: true
   notes: 
     type: textarea
+  transcript: 
+    type: textarea
 _select_data:
   logo_image:
     dark:
