--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # If you change this file, please restart the server process.
 
 # Site settings
-title:              Étoile
+title:              Hope
 description:        Magazine Jekyll theme for writers and bloggers.
 url:                # Site base hostname & protocol, e.g. http://example.com
 baseurl:            "" # Site subpath, e.g. /blog
