--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@
 # If you change this file, please restart the server process.
 
 # Site settings
-title:              
+title:              Hope
 description:        Magazine Jekyll theme for writers and bloggers.
 url:                # Site base hostname & protocol, e.g. http://example.com
 baseurl:            "" # Site subpath, e.g. /blog
 logo_image:
   dark:             Hope-Transparent-Logo.png
-  light:            Hope-Transparent-Logo.png
+  light:            
 permalink:          /:title/ # Permalink URLs structure, for permalink style options see: https://jekyllrb.com/docs/permalinks/
 date_format:        "%B %-d, %Y" # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 uploads:            /uploads/ # Path to post content assets directory i.e post images, pdfs etc
