updates to the bible

--- a/_data/navbar_primary.yml
+++ b/_data/navbar_primary.yml
@@ -20,6 +20,9 @@ center:
   - title: Sport
     url: /category/sport/
 
+  - title: Bible
+    url: /bible
+
   - title: Pages
     dropdown:
       - title: Blog
