--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ url:                # Site base hostname & protocol, e.g. http://example.com
 baseurl:            "" # Site subpath, e.g. /blog
 logo_image:
   dark:             Hope-Transparent-Logo.png
-  light:            
+  light:
+favicon:            /assets/img/favicon.ico
 permalink:          /:title/ # Permalink URLs structure, for permalink style options see: https://jekyllrb.com/docs/permalinks/
 date_format:        "%B %-d, %Y" # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 uploads:            /uploads/ # Path to post content assets directory i.e post images, pdfs etc
