--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@
 # If you change this file, please restart the server process.
 
 # Site settings
+title:              Hope
 url:                # Site base hostname & protocol, e.g. http://example.com
 baseurl:            "" # Site subpath, e.g. /blog
 logo_image:
