fixed some broken links, added/configured new categories

--- a/_data/navbar_primary.yml
+++ b/_data/navbar_primary.yml
@@ -2,8 +2,8 @@ left:
 center:
   - title: Home
     url: /
-  - title: Foundation
-    url: /category/foundation/
+  - title: Meditations
+    url: /category/meditations/
   - title: Daily Hope
     url: /category/daily-hope/
   - title: Nightly Wind Down
