--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Welcome to Plus!
 #
-# This config file affects your whole blog.
+# This config file affects your whole archive.
 # This file is *NOT* reloaded automatically when you use 'bundle exec jekyll serve'.
 # If you change this file, please restart the server process.
 
 # Site settings
 title:              Hope
 url:                # Site base hostname & protocol, e.g. http://example.com
-baseurl:            "" # Site subpath, e.g. /blog
+baseurl:            "" # Site subpath, e.g. /archive
 logo_image:
   dark:             Hope-Transparent-Logo.png
   light:
@@ -15,8 +15,8 @@ favicon:            /assets/img/favicon.ico
 permalink:          /:title/ # Permalink URLs structure, for permalink style options see: https://jekyllrb.com/docs/permalinks/
 date_format:        "%B %-d, %Y" # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 uploads:            /uploads/ # Path to post content assets directory i.e post images, pdfs etc
-paginate:           7 # Number of posts displayed on blog page
-paginate_path:      "/blog/:num/" # Blog path
+#paginate:           10 # Number of posts displayed on archive page
+#paginate_path:      "/archive/page/:num" # Blog path
 google_analytics:   # Google analytics code, get your code here https://www.google.com/analytics/
 disqus:
   shortname:        # Disqus comments shortname, requires Disqus account https://disqus.com/
@@ -71,6 +71,14 @@ plugins:
   - jekyll-avatar
   - jekyll-archives
   - jekyll-sitemap
+  - jekyll-paginate-v2
+
+pagination:
+  enabled: true
+  per_page: 10
+  sort_field: number
+  sort_field_vale_type: integer
+  sort_reverse: true
 
 exclude:
   - Gemfile
@@ -81,6 +89,7 @@ exclude:
   - LICENSE
   - README
   - /docs
+  - local_gems
 
 sass:
   style:            compressed
