--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -105,20 +105,23 @@ _select_data:
     linkedin: true
     pinterest: true
     reddit: true
+    tiktok: true
+    x: true
   social_networks:
     email:
     website:
-    facebook: https://www.facebook.com/
+    facebook:
     flickr:
     dribbble:
     github:
     reddit:
-    instagram: https://www.instagram.com/
+    instagram: https://www.instagram.com/hopemindfulness/
     linkedin:
     pinterest:
-    twitter: https://twitter.com/
+    x: https://x.com/hopemindfulness
+    tiktok: https://www.tiktok.com/@hopemindfulness
     vimeo:
-    youtube: https://www.youtube.com/
+    youtube: https://www.youtube.com/@hopemindfulness
   strings:
     author_by: By
   sass:
