Updated category dropdown with new js features, ect.

--- a/_data/mobile.yml
+++ b/_data/mobile.yml
@@ -1,2 +1,14 @@
+- title: Home
+  url: /
+- title: Meditations
+  url: /category/meditations/
+- title: Daily Hope
+  url: /category/daily-hope/
+- title: Nightly Wind Down
+  url: /category/nightly-wind-down/
+- title: Audio Bible
+  url: /bible
+- title: Archive
+  url: /archive/
 - title: Contact
   url: /contact/
