customized post layout, added new positive affirmations section

--- a/_data/navbar_primary.yml
+++ b/_data/navbar_primary.yml
@@ -10,6 +10,8 @@ center:
     url: /category/nightly-wind-down/
   - title: Audio Bible
     url: /bible
+  - title: Positive Affirmations
+    url: /category/positive-affirmations/
   - title: Archive
     url: /archive/
 right:
