--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ title:              Hope
 url:                # Site base hostname & protocol, e.g. http://example.com
 baseurl:            "" # Site subpath, e.g. /archive
 logo_image:
-  dark:             Hope-Transparent-Logo.png
-  light:
+  dark:             Hope-Logo-Website.png
+  light:            Logo-Footer-2.png
 favicon:            /assets/img/favicon.ico
 permalink:          /:slugified_categories/:title/ # Permalink URLs structure, for permalink style options see: https://jekyllrb.com/docs/permalinks/
 date_format:        "%B %-d, %Y" # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
