--- a/_data/navbar_primary.yml
+++ b/_data/navbar_primary.yml
@@ -8,8 +8,8 @@ center:
     url: /category/daily-hope/
   - title: Nightly Wind Down
     url: /category/nightly-wind-down/
+  - title: Everyday Miracles
+    url: /category/everyday-miracles/
   - title: Audio Bible
     url: /bible
-  - title: Archive
-    url: /archive/
 right:
