--- a/_data/mobile.yml
+++ b/_data/mobile.yml
@@ -6,9 +6,9 @@
   url: /category/daily-hope/
 - title: Nightly Wind Down
   url: /category/nightly-wind-down/
+- title: Everyday Miracles
+  url: /category/everyday-miracles/
 - title: Audio Bible
   url: /bible
-- title: Archive
-  url: /archive/
 - title: Contact
   url: /contact/
