updated index page with new text/image and meditation pages
pushed updates to scroll-button, search bar, and "lets get social" section

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,1 +1,1 @@
-- footer-text: Sign up and see what is happening in the City!
+- footer-text: Receive timeless insights to strengthen your Christian meditation practice.
