--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,1 +1,1 @@
-- footer-text: Receive timeless insights to strengthen your Christian meditation practice.
+- footer-text: Receive timeless insights to strengthen your Christian meditation journey.
